--- a/app/src/main/res/layout/activity_people.xml
+++ b/app/src/main/res/layout/activity_people.xml
@@ -8,7 +8,7 @@
     <data>
         <variable
             name="mainViewModel"
-            type="com.example.mvvm.Model.Data.PeopleViewModel"
+            type="com.example.mvvm.Model.Data.PeopleViewModel"/>
     </data>
 
     <android.support.design.widget.CoordinatorLayout
